fix(style): hoist inline fully-qualified names out of the operator-audit changes
ImportStyleTest.noInlineFullyQualifiedNames (AGENTS.md 4.7) went red on
chore/remove-agent-father right after #690 merged. Three files from that PR
used inline fully-qualified names.

Conversation.java spelled out java.util.regex.Pattern twice inside
pendingPlaceholderCandidates(). The compiled pattern becomes an
ORDINAL_SUFFIX constant beside the other pending-message constants, so it
is compiled once at class-init instead of on every resume.

ApiCallsTaskTest used java.util.Map.of(...) six times; the import was
already there. ConversationMemoryUtilitiesTest used java.util.Arrays.asList,
now List.of.

No behaviour change: the regex text and the DOTALL flag are byte-identical
to what they replaced.